# EvidentAI

./: .gitignore  Architect.MD  README.md  STARTUP_PLANNING.md  package.json  pnpm-lock.yaml  txt
.github/workflows/: release.yaml
apps/api/: Dockerfile  evidentai.db  pyproject.toml  requirements.txt
apps/api/alembic/: alembic.ini  env.py
apps/api/src/: config.py  database.py  main.py
apps/api/src/models/: __init__.py  api_key.py  evidence_pack.py  organization.py  project.py  run.py  suite.py  user.py
apps/api/src/routers/: __init__.py  auth.py  evidence_packs.py  organizations.py  projects.py  runs.py  suites.py  webhooks.py
apps/api/src/schemas/: __init__.py  common.py  evidence_pack.py  project.py  run.py  suite.py
apps/api/src/services/: auth_service.py  diff_service.py  evidence_service.py  run_service.py
apps/api/src/templates/: evidence_pack.html
apps/api/src/utils/: security.py
apps/api/tests/: __init__.py  conftest.py  test_evidence.py  test_projects.py  test_runs.py
apps/web/: package.json
apps/web/src/app/: page.tsx
apps/web/src/hooks/: use-projects.ts  use-runs.ts  use-suites.ts
apps/web/src/lib/: api.ts  auth.ts  supabase.ts  utils.ts
apps/web/src/types/: api.ts  database.ts
docs/: api-reference.md  configuration.md  evaluators.md  evidence-packs.md  getting-started.md  self-hosting.md
infra/github/workflows/: deploy-api.yaml  deploy-web.yaml  publish-cli.yaml
infra/terraform/: main.tf  variables.tf
infra/terraform/modules/railway/: main.tf
infra/terraform/modules/supabase/: main.tf
(+36 files in other folders)
